# Xformed

./: .gitignore  Cargo.toml  README.md
crates/audio-features/: Cargo.toml
crates/audio-features/src/: decode.rs  lib.rs
crates/converters/: Cargo.toml
crates/converters/src/: lib.rs
crates/melody-core/: Cargo.toml
crates/melody-core/src/: lib.rs
crates/melody-synth/: Cargo.toml
crates/melody-synth/src/: lib.rs
crates/text-features/: Cargo.toml
crates/text-features/src/: lib.rs
crates/visual-features/: Cargo.toml
crates/visual-features/src/: lib.rs
crates/xformed-cli/: Cargo.toml
crates/xformed-cli/src/: main.rs
outputs/: out.mid  out_from_image.mid  out_from_image.midi.json  out_from_image_0.midi.json  out_from_text_0.midi.json  ssteo.midi.json
services/api/: Cargo.toml
services/api/src/: main.rs
