[workspace]
members = [
  "crates/melody-core",
  "crates/melody-synth",
  "crates/audio-features",
  "crates/visual-features",
  "crates/text-features",
  "crates/converters",
  "crates/xformed-cli",
  "services/api"
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["you <you@example.com>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
