
[package]
name = "converters"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
base64 = { workspace = true }

# used by API integration examples; harmless if not used directly here
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }

# local crates
melody-core = { path = "../melody-core" }
melody-synth = { path = "../melody-synth" }
audio-features = { path = "../audio-features" }
visual-features = { path = "../visual-features" }
text-features = { path = "../text-features" }
